--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -222,10 +222,14 @@ section {
   margin: 40px 0px;
 }
 
+.top-content, .bottom-content {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
 .top-paragraph {
-  display: inline-block;
-  width: 45%;
-  margin-right: 10px;
+  margin-right: 10px; 
 }
 
 .centerer {
@@ -233,8 +237,6 @@ section {
 }
 
 .bottom-paragraph {
-  display: inline-block;
-  width: 32%;
   margin-right: 10px;
 }
 
