--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -11,7 +11,7 @@ applet,
 object,
 iframe,
 h1,
-h2,
+h3,
 h3,
 h4,
 h5,
@@ -157,7 +157,7 @@ body {
 
 nav {
   text-align: center;
-  margin: 50px;
+  margin-top: 50px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -173,7 +173,6 @@ nav a {
 header {
   text-align: center;
   margin-top: 50px;
-  margin-bottom: 100px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -197,6 +196,10 @@ h1 {
   margin-bottom: 25px;
 }
 
+h2 {
+	font-size: 25px;
+}
+
 .image-header {
   height: 330px;
 }
@@ -214,22 +217,40 @@ h1 {
   padding: 3px 40px;
 }
 
+#button-rounded {
+	display: flex;
+	align-items: center;
+	border-radius: 5px;
+	font-size: 12px;
+	border-width: 1px;
+	width: 140px;
+	height: 35px;
+	border-style: solid;
+	text-decoration: none;
+	color: black;
+	padding: 3px 40px;
+	margin-top: 25px;
+	background-color: #ffffff;
+  }
+
 hr {
   border-top: 1px solid black;
+  margin: 40px 0px;
 }
 
 section {
   margin: 40px 0px;
 }
 
-.top-content, .bottom-content {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
+.top-content,
+.bottom-content {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .top-paragraph {
-  margin-right: 10px; 
+  margin-right: 10px;
 }
 
 .centerer {
@@ -244,8 +265,24 @@ section {
   margin-bottom: 15px;
 }
 
-footer {
-  font-size: 13px;
-  text-align: center;
-  padding-bottom: 100px;
+.cards {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
 }
+
+.card {
+	background-color: #f4f3f4;
+	border: 1px solid black;
+	margin: 25px 20px 25px 0px;
+	padding: 20px;
+	width: 400px;
+
+}
+
+footer {
+	font-size: 13px;
+	text-align: center;
+	padding-bottom: 100px;
+  }
